--- a/styles.css
+++ b/styles.css
@@ -3,29 +3,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f3f3f3;
-}
-
-/* Estilizando links */
-a {
-    text-decoration: none;
-    color: #333;
-    transition: color 0.3s ease;
-}
-
-a:hover {
-    color: #f00; /* Mudança de cor ao passar o mouse */
+    background-color: #f0f0f0;
 }
 
 header {
-    background-color: #333;
+    background-color: #2c3e50;
     color: #fff;
-    padding: 10px;
     text-align: center;
+    padding: 20px 0;
 }
 
 nav {
-    background-color: #444;
+    background-color: #34495e;
     color: #fff;
     padding: 10px;
 }
@@ -46,31 +35,25 @@ section {
     padding: 20px;
 }
 
+section h2 {
+    color: #3498db;
+    border-bottom: 2px solid #3498db;
+    padding-bottom: 10px;
+}
+
+.habilidade, .constelacao, .build {
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+}
+
 footer {
-    background-color: #333;
+    background-color: #2c3e50;
     color: #fff;
     text-align: center;
     padding: 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-/* Estilizando links de imagens */
-.item-link {
-    display: inline-block;
-    margin: 10px;
-    text-align: center;
-}
-
-.item-link img {
-    width: 150px; /* Tamanho das imagens */
-    height: auto;
-    border-radius: 8px; /* Borda arredondada */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Sombra */
-    transition: transform 0.3s ease;
-}
-
-.item-link img:hover {
-    transform: scale(1.1); /* Aumenta a imagem ao passar o mouse */
 }
