--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
+    background-image: url('https://wallpapercave.com/wp/wp9550695.jpg'); /* Adicione sua imagem de fundo aqui */
+    background-size: cover;
+    background-position: center;
 }
 
 header {
@@ -42,10 +45,24 @@ section h2 {
 }
 
 .habilidade, .constelacao, .build {
+    display: flex;
+    align-items: center;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 5px;
+}
+
+.habilidade img,
+.constelacao img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+}
+
+.habilidade .texto-habilidade,
+.constelacao .texto-constelacao {
+    flex: 1;
 }
 
 footer {
