--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
-    background-image: url('https://wallpapercave.com/wp/wp9550695.jpg'); /* Adicione sua imagem de fundo aqui */
+    background-image: url('https://wallpapercave.com/wp/wp9550695.jpg');
     background-size: cover;
     background-position: center;
 }
