--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,22 @@ footer {
     bottom: 0;
     width: 100%;
 }
+.habilidade, .constelacao {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #cecece; /* Adição do fundo branco */
+}
+
+.habilidade img, .constelacao img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+}
+
+.habilidade .texto-habilidade, .constelacao .texto-constelacao {
+    flex: 1;
+}
